--- a/index.html
+++ b/index.html
@@ -157,109 +157,108 @@
                 </div>
             </div>
         </div>
+        <!-- pour ajouter, supprimer ou modifier un skills ici, vous devez le faire aussi dans le fichier _skills.scss et le fichier main.js partie skills -->
         <div class="section" id="competences">
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>                
-                    <div class="flexrow card container-skills"  data-aos="fade-up"
+                    <div class=" card container-skills"  data-aos="fade-up"
                         data-aos-anchor-placement="top-bottom">
-                        <ul class=" col-lg-6 col-md-6 col-sm-12 skills-bar-container">
-                            <li>
+                        <ul class="flexrow flex-wrap skills-bar-container">
+                            <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
                                     <span>HTML5</span>
                                     <span class="percent" id="html-pourcent"></span>
                                 </div>
                                 <div class="bar-container">                                   
-                                    <span class="progressbar progressred" id="progress-html"></span>
+                                    <span class="progressbar " id="progress-html"></span>
                                 </div>
                             </li>
-                            <li>
+                            <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
                                     <span>CSS / SASS</span>
                                     <span class="percent" id="css-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
-                                    <span class="progressbar progressblue" id="progress-css"></span>
+                                    <span class="progressbar " id="progress-css"></span>
                                 </div>
                             </li>
 
-                            <li>
+                              <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
                                     <span>JavaScript / jQuery</span>
                                     <span class="percent" id="javascript-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
-                                    <span class="progressbar progresspurple" id="progress-javascript"></span>
+                                    <span class="progressbar " id="progress-javascript"></span>
                                 </div>
                             </li>
 
-                            <li>
+                              <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
                                     <span>PHP</span>
                                     <span class="percent" id="php-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
-                                    <span class="progressbar progressorange" id="progress-php"></span>
+                                    <span class="progressbar " id="progress-php"></span>
                                 </div>
                             </li>
 
-                            <li>
+                              <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
                                     <span>React Js</span>
                                     <span class="percent" id="react-js-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
-                                    <span class="progressbar progressgreen" id="progress-react"></span>
+                                    <span class="progressbar " id="progress-react"></span>
                                 </div>
                             </li>
-                            
-                        </ul>
-                        <ul class="col-lg-6 col-md-6 col-sm-12 skills-bar-container">
-                            <li>
+                         
+                              <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
                                     <span>HTML5</span>
                                     <span class="percent" id="html-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
-                                    <span class="progressbar progressred" id="progress-html"></span>
+                                    <span class="progressbar " id="progress-html"></span>
                                 </div>
                             </li>
-                            <li>
+                              <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
                                     <span>CSS / SASS</span>
                                     <span class="percent" id="css-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
-                                    <span class="progressbar progressblue" id="progress-css"></span>
+                                    <span class="progressbar " id="progress-css"></span>
                                 </div>
                             </li>
 
-                            <li>
+                              <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
                                     <span>JavaScript / jQuery</span>
                                     <span class="percent" id="javascript-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
-                                    <span class="progressbar progresspurple" id="progress-javascript"></span>
+                                    <span class="progressbar " id="progress-javascript"></span>
                                 </div>
                             </li>
 
-                            <li>
+                              <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
                                     <span>PHP</span>
                                     <span class="percent" id="php-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
-                                    <span class="progressbar progressorange" id="progress-php"></span>
+                                    <span class="progressbar " id="progress-php"></span>
                                 </div>
                             </li>
 
-                            <li>
+                              <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
                                     <span>React Js</span>
                                     <span class="percent" id="react-js-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
-                                    <span class="progressbar progressgreen" id="progress-react"></span>
+                                    <span class="progressbar " id="progress-react"></span>
                                 </div>
                             </li>
 
