--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                             </li>
                             <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
-                                    <span>CSS / SASS</span>
+                                    <span>CSS3 / SASS</span>
                                     <span class="percent" id="css-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
