--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
                               <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
-                                    <span>JavaScript / jQuery</span>
+                                    <span>JAVASCRIPT / JQUERY</span>
                                     <span class="percent" id="javascript-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
@@ -195,18 +195,28 @@
 
                               <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
-                                    <span>PHP</span>
-                                    <span class="percent" id="php-pourcent"></span>
+                                    <span>BOOTSTRAP</span>
+                                    <span class="percent" id="bootstrap-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
-                                    <span class="progressbar " id="progress-php"></span>
+                                    <span class="progressbar " id="progress-bootstrap"></span>
                                 </div>
                             </li>
 
+                            <li class="col-lg-6 col-md-6 col-sm-12">
+                                <div class="progressbar-title">
+                                    <span>PHOTOSHOP</span>
+                                    <span class="percent" id="photoshop-pourcent"></span>
+                                </div>
+                                <div class="bar-container">
+                                    <span class="progressbar " id="progress-photoshop"></span>
+                                </div>
+                            </li>
+          
                               <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
-                                    <span>React Js</span>
-                                    <span class="percent" id="react-js-pourcent"></span>
+                                    <span>REACT JS</span>
+                                    <span class="percent" id="react-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
                                     <span class="progressbar " id="progress-react"></span>
@@ -215,52 +225,43 @@
                          
                               <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
-                                    <span>HTML5</span>
-                                    <span class="percent" id="html-pourcent"></span>
-                                </div>
-                                <div class="bar-container">
-                                    <span class="progressbar " id="progress-html"></span>
-                                </div>
-                            </li>
-                              <li class="col-lg-6 col-md-6 col-sm-12">
-                                <div class="progressbar-title">
-                                    <span>CSS / SASS</span>
-                                    <span class="percent" id="css-pourcent"></span>
-                                </div>
-                                <div class="bar-container">
-                                    <span class="progressbar " id="progress-css"></span>
-                                </div>
-                            </li>
-
-                              <li class="col-lg-6 col-md-6 col-sm-12">
-                                <div class="progressbar-title">
-                                    <span>JavaScript / jQuery</span>
-                                    <span class="percent" id="javascript-pourcent"></span>
-                                </div>
-                                <div class="bar-container">
-                                    <span class="progressbar " id="progress-javascript"></span>
-                                </div>
-                            </li>
-
-                              <li class="col-lg-6 col-md-6 col-sm-12">
-                                <div class="progressbar-title">
-                                    <span>PHP</span>
+                                    <span>PHP / MYSQL</span>
                                     <span class="percent" id="php-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
                                     <span class="progressbar " id="progress-php"></span>
                                 </div>
                             </li>
+                              <li class="col-lg-6 col-md-6 col-sm-12">
+                                <div class="progressbar-title">
+                                    <span>WORDPRESS</span>
+                                    <span class="percent" id="wordpress-pourcent"></span>
+                                </div>
+                                <div class="bar-container">
+                                    <span class="progressbar " id="progress-wordpress"></span>
+                                </div>
+                            </li>
 
                               <li class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="progressbar-title">
-                                    <span>React Js</span>
-                                    <span class="percent" id="react-js-pourcent"></span>
+                                    <span>ASP.NET</span>
+                                    <span class="percent" id="asp-pourcent"></span>
                                 </div>
                                 <div class="bar-container">
-                                    <span class="progressbar " id="progress-react"></span>
+                                    <span class="progressbar " id="progress-asp"></span>
                                 </div>
                             </li>
+
+                              <li class="col-lg-6 col-md-6 col-sm-12">
+                                <div class="progressbar-title">
+                                    <span>SGBD SQL</span>
+                                    <span class="percent" id="sql-pourcent"></span>
+                                </div>
+                                <div class="bar-container">
+                                    <span class="progressbar " id="progress-sql"></span>
+                                </div>
+                            </li>
+
 
                         </ul>
                     </div>
