--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <link href="public/css/bootstrap.min.css" rel="stylesheet">   
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">    
-    <link href="public/css/main.css" rel="stylesheet">
-   
-
+    <link href="public/css/main.css" rel="stylesheet">   
     <!-- DES ANIMATIONS AU SCROLL AVEC AOS -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="public/css/aos.css" rel="stylesheet">
     <title>Oumaima Creation CV</title>
 </head>
 
