--- a/index.html
+++ b/index.html
@@ -537,6 +537,7 @@
                 </div>
             </div>
         </div>
+        
         <div class="section" id="contact">
             <div class="cc-contact-information" style="background-image: url('public/images/staticmap.png')">
                 <div class="container">
@@ -615,16 +616,32 @@
         </div>
     </div>
     <footer class="footer">
-        <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x "
-                    aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i
-                    class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link"
-                href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a
-                class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a>
+        <div class="container wrapper">
+            <div class="icon facebook">
+                <div class="tooltip">Facebook</div>
+                <span><i class="fab fa-facebook-f"></i></span>
+            </div>
+            <div class="icon twitter">
+                <div class="tooltip">Twitter</div>
+                <span><i class="fab fa-twitter"></i></span>
+            </div>
+            <div class="icon instagram">
+                <div class="tooltip">Instagram</div>
+                <span><i class="fab fa-instagram"></i></span>
+            </div>
+            <div class="icon github">
+                <div class="tooltip">Github</div>
+                <span><i class="fab fa-github"></i></span>
+            </div>
+            <div class="icon youtube">
+                <div class="tooltip">Youtube</div>
+                <span><i class="fab fa-youtube"></i></span>
+            </div>
         </div>
-        <div class="h4 title text-center">Anthony Barnett</div>
-        <div class="text-center text-muted">
-            <p>&copy; Creative CV. All rights reserved.<br>Design - <a class="credit" href="https://templateflip.com"
-                    target="_blank">TemplateFlip</a></p>
+        <div class="h4 title text-center">Oumaima El Obayid</div>
+        <div class="text-center h6 text-muted">
+            <p>&copy; OUMCREATION. All rights reserved.<br>Design - <a class="credit" href="https://oumcreation.com"
+                    target="_blank">Oumcreation</a></p>
         </div>
     </footer>
 
