--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div>
                 </div>
 
-                <div class="container wrapper">
+                <div class="social container wrapper">
                     <div class="icon facebook">
                         <div class="tooltip">Facebook</div>
                         <span><i class="fab fa-facebook-f"></i></span>
