--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
 </head>
 
 <body>
+     <!-- ---------------------------------------Navbar------------------------------------------------ -->
     <header class="section" id="header">
         <nav class="navbar navbar-expand-md fixed-top">
             <div class="container">
-                <a class="logo text-nowrap" href="#header"></a>
+                <a class="logo text-nowrap" href="#header">
+                    <!-- votre logo ou nom de votre entreprise . vous ne mettez rien ici  -->
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon text-secondary"></span>
                 </button>
@@ -41,30 +44,12 @@
             </div>
         </nav>
     </header>
-
-
+     <!-- ---------------------------------------Navbar------------------------------------------------ -->
     <div class="content">
         <div class="wrapper">
             <div class="content-profile">
-                <div class="welcom parallax-window" data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">
-                    <div class="bubble-ocean">
-                        <div class="bubble bubble--1"></div>
-                        <div class="bubble bubble--2"></div>
-                        <div class="bubble bubble--3"></div>
-                        <div class="bubble bubble--4"></div>
-                        <div class="bubble bubble--5"></div>
-                        <div class="bubble bubble--6"></div>
-                        <div class="bubble bubble--7"></div>
-                        <div class="bubble bubble--8"></div>
-                        <div class="bubble bubble--9"></div>
-                        <div class="bubble bubble--10"></div>
-                        <div class="bubble bubble--11"></div>
-                        <div class="bubble bubble--12"></div>
-                        <div class="bubble bubble--13"></div>
-                        <div class="bubble bubble--14"></div>
-                        <div class="bubble bubble--15"></div>
-                        <div class="bubble bubble--16"></div>
-                    </div>
+                <div class="welcom" data-parallax="scroll" data-image-src="public/images/bgprofile.jpg">
+                  
                 </div>
                 <div class="container content-profile-center">
                     <div class="profile-img" data-aos="zoom-in" data-aos-duration="2000" data-aos-delay="1000">
@@ -86,7 +71,24 @@
                         </div>
                     </div>
                 </div>
-
+                <div class="bubble-ocean">
+                    <div class="bubble bubble--1"></div>
+                    <div class="bubble bubble--2"></div>
+                    <div class="bubble bubble--3"></div>
+                    <div class="bubble bubble--4"></div>
+                    <div class="bubble bubble--5"></div>
+                    <div class="bubble bubble--6"></div>
+                    <div class="bubble bubble--7"></div>
+                    <div class="bubble bubble--8"></div>
+                    <div class="bubble bubble--9"></div>
+                    <div class="bubble bubble--10"></div>
+                    <div class="bubble bubble--11"></div>
+                    <div class="bubble bubble--12"></div>
+                    <div class="bubble bubble--13"></div>
+                    <div class="bubble bubble--14"></div>
+                    <div class="bubble bubble--15"></div>
+                    <div class="bubble bubble--16"></div>
+                </div>
                 <div class="social container wrapper">
                     <div class="icon facebook">
                         <div class="tooltip">Facebook</div>
@@ -156,8 +158,9 @@
                 </div>
             </div>
         </div>
+        <!-- ---------------------------------------Partiee Skills------------------------------------------------- -->
         <!-- pour ajouter, supprimer ou modifier un skills ici, vous devez le faire aussi dans le fichier _skills.scss et le fichier main.js partie skills -->
-        <div class="section" id="competences">
+        <div class="section" id="skills">
             <div class="container">
                 <div class="h4 text-center mb-4 title mt-4">Professional Skills</div>
                 <div class=" card container-skills" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
@@ -165,16 +168,16 @@
                         <li class="col-lg-6 col-md-6 col-sm-12">
                             <div class="progressbar-title">
                                 <span>HTML5</span>
-                                <span class="percent" id="html-pourcent"></span>
+                                <span class="percent">98%</span>
                             </div>
                             <div class="bar-container">
                                 <span class="progressbar " id="progress-html"></span>
                             </div>
                         </li>
                         <li class="col-lg-6 col-md-6 col-sm-12">
-                            <div class="progressbar-title">
+                            <div class="progressbar-title" >
                                 <span>CSS3 / SASS</span>
-                                <span class="percent" id="css-pourcent"></span>
+                                <span class="percent">95%</span>
                             </div>
                             <div class="bar-container">
                                 <span class="progressbar " id="progress-css"></span>
@@ -184,7 +187,7 @@
                         <li class="col-lg-6 col-md-6 col-sm-12">
                             <div class="progressbar-title">
                                 <span>JAVASCRIPT / JQUERY</span>
-                                <span class="percent" id="javascript-pourcent"></span>
+                                <span class="percent">75%</span>
                             </div>
                             <div class="bar-container">
                                 <span class="progressbar " id="progress-javascript"></span>
@@ -194,7 +197,7 @@
                         <li class="col-lg-6 col-md-6 col-sm-12">
                             <div class="progressbar-title">
                                 <span>BOOTSTRAP</span>
-                                <span class="percent" id="bootstrap-pourcent"></span>
+                                <span class="percent">80%</span>
                             </div>
                             <div class="bar-container">
                                 <span class="progressbar " id="progress-bootstrap"></span>
@@ -204,7 +207,7 @@
                         <li class="col-lg-6 col-md-6 col-sm-12">
                             <div class="progressbar-title">
                                 <span>PHOTOSHOP</span>
-                                <span class="percent" id="photoshop-pourcent"></span>
+                                <span class="percent">65%</span>
                             </div>
                             <div class="bar-container">
                                 <span class="progressbar " id="progress-photoshop"></span>
@@ -214,7 +217,7 @@
                         <li class="col-lg-6 col-md-6 col-sm-12">
                             <div class="progressbar-title">
                                 <span>REACT JS</span>
-                                <span class="percent" id="react-pourcent"></span>
+                                <span class="percent">65%</span>
                             </div>
                             <div class="bar-container">
                                 <span class="progressbar " id="progress-react"></span>
@@ -224,7 +227,7 @@
                         <li class="col-lg-6 col-md-6 col-sm-12">
                             <div class="progressbar-title">
                                 <span>PHP / MYSQL</span>
-                                <span class="percent" id="php-pourcent"></span>
+                                <span class="percent">70%</span>
                             </div>
                             <div class="bar-container">
                                 <span class="progressbar " id="progress-php"></span>
@@ -233,7 +236,7 @@
                         <li class="col-lg-6 col-md-6 col-sm-12">
                             <div class="progressbar-title">
                                 <span>WORDPRESS</span>
-                                <span class="percent" id="wordpress-pourcent"></span>
+                                <span class="percent">70%</span>
                             </div>
                             <div class="bar-container">
                                 <span class="progressbar " id="progress-wordpress"></span>
@@ -243,7 +246,7 @@
                         <li class="col-lg-6 col-md-6 col-sm-12">
                             <div class="progressbar-title">
                                 <span>ASP.NET</span>
-                                <span class="percent" id="asp-pourcent"></span>
+                                <span class="percent">50%</span>
                             </div>
                             <div class="bar-container">
                                 <span class="progressbar " id="progress-asp"></span>
@@ -253,7 +256,7 @@
                         <li class="col-lg-6 col-md-6 col-sm-12">
                             <div class="progressbar-title">
                                 <span>SGBD SQL</span>
-                                <span class="percent" id="sql-pourcent"></span>
+                                <span class="percent">65%</span>
                             </div>
                             <div class="bar-container">
                                 <span class="progressbar " id="progress-sql"></span>
