--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li class="nav-item"><a class="nav-link" href="#header">ACCUEIL</a></li>
                         <li class="nav-item"><a class="nav-link" href="#apropos">À PROPOS</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#competences">COMPETENCES</a>
+                        <li class="nav-item"><a class="nav-link" href="#skills">COMPETENCES</a>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">PORTFOLIO</a>
                         </li>
